--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Auto-Style</title>
+
 <style>
-body{font-family: Arial, sans-serif;margin:0;padding:20px;background:#f5f6f8;overflow-x:hidden;}
+body{
+    font-family: Arial, sans-serif;
+    margin:0;
+    padding:20px;
+    background:#f5f6f8;
+    overflow-x:hidden;
+    min-height:100vh;
+}
+
 /* ---------- LOGIN ---------- */
 .login-screen{
     position:fixed;top:0;left:0;width:100%;height:100vh;
@@ -20,37 +29,85 @@ body{font-family: Arial, sans-serif;margin:0;padding:20px;background:#f5f6f8;ove
 .login-logo .green{color:#2e7d32;}
 .login-logo .black{color:#000;}
 .login-subtitle{color:#555;margin-bottom:15px;}
-select,input[type="password"]{width:100%;padding:12px;font-size:16px;margin-bottom:15px;border:1px solid #ccc;border-radius:6px;}
-.login-btn{width:100%;padding:12px;font-size:16px;border:none;border-radius:6px;cursor:pointer;color:white;background:linear-gradient(to right,#43a047,#1b5e20);}
+select,input[type="password"]{
+    width:100%;padding:12px;font-size:16px;margin-bottom:15px;border:1px solid #ccc;border-radius:6px;
+}
+.login-btn{
+    width:100%;padding:12px;font-size:16px;border:none;border-radius:6px;cursor:pointer;color:white;
+    background:linear-gradient(to right,#43a047,#1b5e20);
+}
 .error-msg{color:#d32f2f;font-size:14px;margin-top:8px;}
 @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
 
 /* ---------- HEADER ---------- */
-.header{background:white;padding:15px;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.1);margin-bottom:20px;text-align:center;}
+.header{
+    background:white;padding:15px;border-radius:6px;
+    box-shadow:0 2px 6px rgba(0,0,0,.1);
+    margin-bottom:20px;text-align:center;
+}
 .logo{font-size:28px;font-weight:bold;}
 .logo .green{color:#2e7d32;}
 .logo .black{color:#000;}
 
 /* ---------- MENU ---------- */
-.menu-toggle{position:fixed;top:20px;left:20px;width:45px;height:45px;background:linear-gradient(135deg,#2e7d32,#1b5e20);color:white;display:flex;align-items:center;justify-content:center;border-radius:12px;cursor:pointer;z-index:3000;box-shadow:0 6px 20px rgba(0,0,0,.3);transition:.3s;}
+.menu-toggle{
+    position:fixed;top:20px;left:20px;width:45px;height:45px;
+    background:linear-gradient(135deg,#2e7d32,#1b5e20);
+    color:white;display:flex;align-items:center;justify-content:center;
+    border-radius:12px;cursor:pointer;z-index:3000;
+    box-shadow:0 6px 20px rgba(0,0,0,.3);transition:.3s;
+}
 .menu-toggle:hover{transform:scale(1.1);}
-.side-menu{position:fixed;top:0;left:-320px;width:300px;height:100%;background:rgba(20,20,20,.95);backdrop-filter:blur(12px);color:white;padding:80px 20px 20px 20px;transition:.4s cubic-bezier(.77,0,.18,1);z-index:2500;box-shadow:10px 0 40px rgba(0,0,0,.5);}
-.side-menu.active{left:0;}
+
+.side-menu{
+    position:fixed;
+    top:0;
+    left:0;
+    width:300px;
+    height:100%;
+    background:rgba(20,20,20,.95);
+    backdrop-filter:blur(12px);
+    color:white;
+    padding:80px 20px 20px 20px;
+    transform:translateX(-100%);
+    transition:.4s cubic-bezier(.77,0,.18,1);
+    z-index:2500;
+    box-shadow:10px 0 40px rgba(0,0,0,.5);
+}
+.side-menu.active{
+    transform:translateX(0);
+}
+
 .user-name{font-size:20px;font-weight:bold;margin-bottom:15px;color:#43a047;}
-.menu-btn{width:100%;padding:12px;margin-bottom:12px;border:none;border-radius:8px;cursor:pointer;color:white;font-size:14px;transition:.3s;background:linear-gradient(to right,#333,#222);}
-.menu-btn:hover{transform:translateX(6px);background:linear-gradient(to right,#43a047,#1b5e20);}
+.menu-btn{
+    width:100%;padding:12px;margin-bottom:12px;border:none;border-radius:8px;
+    cursor:pointer;color:white;font-size:14px;transition:.3s;
+    background:linear-gradient(to right,#333,#222);
+}
+.menu-btn:hover{
+    transform:translateX(6px);
+    background:linear-gradient(to right,#43a047,#1b5e20);
+}
 .logout-btn{background:linear-gradient(to right,#c62828,#8e0000);}
 
 /* ---------- CALCULATORS ---------- */
 .wrapper{display:flex;gap:20px;flex-wrap:wrap;width:100%;}
-.calculator{background:#fff;border-radius:6px;padding:20px;box-shadow:0 2px 6px rgba(0,0,0,0.1);flex:1 1 300px;width:100%;}
+.calculator{
+    background:#fff;border-radius:6px;padding:20px;
+    box-shadow:0 2px 6px rgba(0,0,0,0.1);
+    flex:1 1 300px;width:100%;
+}
 .title{font-size:20px;font-weight:bold;}
 .subtitle{color:#d32f2f;font-weight:bold;margin-bottom:15px;}
 .hint{margin-bottom:10px;color:#555;}
-.input{width:100%;padding:10px;font-size:16px;margin-bottom:15px;border:1px solid #ccc;border-radius:4px;}
-.btn{width:100%;color:white;padding:12px;font-size:16px;border:none;border-radius:4px;cursor:pointer;margin-bottom:20px;transition:.2s;}
-.btn:hover{opacity:.9;}
-.btn:active{transform:scale(.98);}
+.input{
+    width:100%;padding:10px;font-size:16px;margin-bottom:15px;
+    border:1px solid #ccc;border-radius:4px;
+}
+.btn{
+    width:100%;color:white;padding:12px;font-size:16px;
+    border:none;border-radius:4px;cursor:pointer;margin-bottom:20px;
+}
 .btn-calc{background:linear-gradient(to right,#1976d2,#0d47a1);}
 table{width:100%;border-collapse:collapse;font-size:14px;}
 th{text-align:left;padding-bottom:8px;border-bottom:1px solid #ddd;}
@@ -59,18 +116,56 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
 .result{font-weight:bold;}
 
 /* ---------- CHAT ---------- */
-#chatToggle{position:fixed;bottom:20px;right:20px;background:#2e7d32;color:white;padding:12px 15px;border-radius:30px;cursor:pointer;z-index:3000;}
-#chatWindow{position:fixed;bottom:80px;right:20px;width:300px;height:400px;background:#1c1c1c;border-radius:12px;display:none;flex-direction:column;overflow:hidden;z-index:3000;}
-#chatHeader{background:#2e7d32;color:white;padding:10px;font-weight:bold;}
-#chatMessages{flex:1;padding:10px;color:white; overflow-y:auto;font-size:14px;}
-#chatInputArea{display:flex;padding:10px;background:#111;}
-#chatInput{flex:1;padding:8px;border:none;border-radius:6px;}
-#chatSend{margin-left:5px;padding:8px 10px;background:#2e7d32;color:white;border:none;border-radius:6px;}
+#chatToggle{
+    position:fixed;bottom:20px;right:20px;
+    background:#2e7d32;color:white;padding:12px 15px;
+    border-radius:30px;cursor:pointer;z-index:3000;
+}
+#chatWindow{
+    position:fixed;bottom:80px;right:20px;
+    width:320px;height:420px;background:#1c1c1c;
+    border-radius:12px;display:none;flex-direction:column;
+    overflow:hidden;z-index:3000;
+}
+#chatHeader{
+    background:#2e7d32;color:white;padding:10px;font-weight:bold;
+}
+#chatMessages{
+    flex:1;padding:10px;color:white;
+    overflow-y:auto;font-size:14px;
+}
+#chatInputArea{
+    display:flex;padding:10px;background:#111;
+}
+#chatInput{
+    flex:1;padding:8px;border:none;border-radius:6px;
+}
+#chatSend{
+    margin-left:5px;padding:8px 10px;
+    background:#2e7d32;color:white;border:none;border-radius:6px;
+}
+
+/* ---------- MOBILE ---------- */
+@media (max-width:768px){
+
+  body{padding:10px;}
+
+  #chatWindow{
+    width:100%;
+    height:70vh;
+    right:0;
+    bottom:0;
+    border-radius:0;
+  }
+
+  .wrapper{flex-direction:column;}
+  .calculator{flex:1 1 100%;}
+}
 </style>
 </head>
 <body>
 
-<!-- LOGIN SCREEN -->
+<!-- LOGIN -->
 <div id="loginScreen" class="login-screen">
   <div class="login-box">
     <div class="login-logo"><span class="green">A</span><span class="black">uto-</span><span class="green">S</span><span class="black">tyle</span></div>
@@ -104,7 +199,8 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
 
 <!-- CALCULATORS -->
 <div class="wrapper">
-  <!-- Калькулятор АГРОПРОМБАНК -->
+
+  <!-- АГРОПРОМБАНК -->
   <div class="calculator">
     <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
     <div class="subtitle">АГРОПРОМБАНК</div>
@@ -119,36 +215,7 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
       <tr><td>12 мес.</td><td class="coef">0.875</td><td class="result"></td></tr>
     </table>
   </div>
-  <!-- Калькулятор ЭКСИМБАНК -->
-  <div class="calculator">
-    <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-    <div class="subtitle">ЭКСИМБАНК</div>
-    <div class="hint">Введите сумму чека</div>
-    <input type="number" class="input sum">
-    <button class="btn btn-calc">РАССЧИТАТЬ</button>
-    <table>
-      <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
-      <tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
-      <tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-      <tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-      <tr><td>12 мес.</td><td class="coef">0.886</td><td class="result"></td></tr>
-    </table>
-  </div>
-  <!-- Калькулятор СБЕРБАНК -->
-  <div class="calculator">
-    <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
-    <div class="subtitle">СБЕРБАНК</div>
-    <div class="hint">Введите сумму чека</div>
-    <input type="number" class="input sum">
-    <button class="btn btn-calc">РАССЧИТАТЬ</button>
-    <table>
-      <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
-      <tr><td>3 мес.</td><td class="coef">0.96</td><td class="result"></td></tr>
-      <tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
-      <tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
-      <tr><td>12 мес.</td><td class="coef">0.88</td><td class="result"></td></tr>
-    </table>
-  </div>
+
 </div>
 
 <!-- CHAT -->
@@ -163,102 +230,94 @@ td{padding:10px 0;border-bottom:1px solid #eee;}
 </div>
 
 <script>
-// Пользователи
-const users = {
-  cashier:{name:"Кассир", pass:"2012"},
-  evgeniy:{name:"Евгений", pass:"0186"},
-  vadim:{name:"Вадим", pass:"2385"}
+const users={
+  cashier:{name:"Кассир",pass:"2012"},
+  evgeniy:{name:"Евгений",pass:"0186"},
+  vadim:{name:"Вадим",pass:"2385"}
 };
 let currentUser="";
 const chatKey="chatHistory";
 
-// Вход
-document.getElementById("loginBtn").onclick = function(){
-  const user=document.getElementById("userSelect").value;
-  const pass=document.getElementById("passwordInput").value;
+/* LOGIN */
+document.getElementById("loginBtn").onclick=function(){
+  const user=userSelect.value;
+  const pass=passwordInput.value;
   if(pass===users[user].pass){
-    const expire = Date.now()+24*60*60*1000; // 24 часа
-    localStorage.setItem("session",JSON.stringify({user:user,expire}));
+    localStorage.setItem("session",JSON.stringify({user,expire:Date.now()+86400000}));
     startSession(user);
-  } else {
-    document.getElementById("errorMsg").textContent="Неверный пароль";
-  }
+  } else errorMsg.textContent="Неверный пароль";
 };
 
-window.onload = function(){
-  const saved = localStorage.getItem("session");
+window.onload=function(){
+  const saved=localStorage.getItem("session");
   if(saved){
-    const data = JSON.parse(saved);
+    const data=JSON.parse(saved);
     if(Date.now()<data.expire) startSession(data.user);
     else localStorage.removeItem("session");
   }
 };
 
-// Начало сессии
 function startSession(user){
-  currentUser = user;
-  document.getElementById("loginScreen").style.display="none";
-  document.getElementById("currentUser").textContent = "👤 " + users[user].name;
+  currentUser=user;
+  loginScreen.style.display="none";
+  currentUserElement=document.getElementById("currentUser");
+  currentUserElement.textContent="👤 "+users[user].name;
   loadChat();
-  if(user!=="vadim") document.getElementById("chatInputArea").style.display="none";
 }
 
-// Выход
 function logout(){
   localStorage.removeItem("session");
   location.reload();
 }
 
-// Меню
-function toggleMenu(){document.getElementById("sideMenu").classList.toggle("active");}
+function toggleMenu(){
+  sideMenu.classList.toggle("active");
+}
 
-// Калькуляторы
+/* CALC */
 document.querySelectorAll('.calculator').forEach(calc=>{
-  const btn = calc.querySelector('.btn-calc');
+  const btn=calc.querySelector('.btn-calc');
   btn.addEventListener('click',()=>{
-    const sum = parseFloat(calc.querySelector('.sum').value);
-    if(isNaN(sum)||sum<0) return;
-    const coefs = calc.querySelectorAll('td.coef');
-    const results = calc.querySelectorAll('td.result');
-    coefs.forEach((c,i)=>{
-      results[i].textContent = (sum/parseFloat(c.textContent)).toLocaleString('ru-RU',{minimumFractionDigits:2,maximumFractionDigits:2});
+    const sum=parseFloat(calc.querySelector('.sum').value);
+    if(isNaN(sum)||sum<0)return;
+    calc.querySelectorAll('.coef').forEach((c,i)=>{
+      calc.querySelectorAll('.result')[i].textContent=
+      (sum/parseFloat(c.textContent)).toLocaleString('ru-RU',{minimumFractionDigits:2});
     });
-  });
-  calc.querySelector('.sum').addEventListener('keydown', e=>{
-    if(e.key==='Enter') btn.click();
   });
 });
 
-// Чат
+/* CHAT */
 function toggleChat(){
-  const w = document.getElementById("chatWindow");
-  w.style.display = w.style.display==="flex" ? "none" : "flex";
+  chatWindow.style.display=chatWindow.style.display==="flex"?"none":"flex";
 }
-document.getElementById("chatSend").onclick=function(){
-  const msg = document.getElementById("chatInput").value.trim();
-  if(!msg) return;
-  // Сохраняем сообщения с указанием пользователя
-  let data = JSON.parse(localStorage.getItem(chatKey)||"[]");
+
+chatSend.onclick=function(){
+  const msg=chatInput.value.trim();
+  if(!msg)return;
+  let data=JSON.parse(localStorage.getItem(chatKey)||"[]");
   data.push({user:currentUser,text:msg});
   localStorage.setItem(chatKey,JSON.stringify(data));
-  document.getElementById("chatInput").value="";
+  chatInput.value="";
   loadChat();
 };
 
 function loadChat(){
-  const box = document.getElementById("chatMessages");
-  box.innerHTML = "";
-  const data = JSON.parse(localStorage.getItem(chatKey)||"[]");
+  chatMessages.innerHTML="";
+  const data=JSON.parse(localStorage.getItem(chatKey)||"[]");
   data.forEach(m=>{
-    // Отображаем сообщение только если оно адресовано текущему пользователю
-    if(m.user === currentUser || currentUser==="vadim"){
-      const d=document.createElement("div");
-      d.textContent = users[m.user].name+": "+m.text;
-      box.appendChild(d);
-    }
+    const d=document.createElement("div");
+    d.innerHTML="<strong>"+users[m.user].name+":</strong> "+m.text;
+    chatMessages.appendChild(d);
   });
-  box.scrollTop = box.scrollHeight;
+  chatMessages.scrollTop=chatMessages.scrollHeight;
 }
+
+window.addEventListener("storage",e=>{
+  if(e.key===chatKey)loadChat();
+});
+
+setInterval(loadChat,2000);
 </script>
 
 </body>
